refactor: code update
- 컨트롤러 수정(url,구조에 맞게 기능 수정)
- 컨트롤러 변경에 따른 서비스 수정
- 컨트롤러와 서비스변경에 따른 테스트 수정

#9